# substantial

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  build.sh  example  pyproject.toml  setup.sh  simple-1-d6860eb3-9c67-44ab-a3b0-976e343765a0  whiz.yaml
.github/workflows/: pr-title-check.yaml  release-request.yaml  test-release.yaml  tests.yaml
demo/: main.py  readme.py  readme_ws.py  workflow.py  workflows.py
demos/: workflow.py
dev/: fix-declarations.ts  redis.compose.yaml
logs/: example  example.json
protocol/: events.proto  metadata.proto
python/: pyproject.toml
python/substantial/protos/metadata/: __init__.py
substantial/: Cargo.toml  __init__.py  agent.py  conductor.py  filters.py  log_recorder.py  main.py  task_queue.py  task_queue.py.disabled  types.py  workflow.py
substantial/backends/: agent.py  backend.py  fs.py  redis.py
substantial/common/: Cargo.toml
substantial/common/src/: host.rs  lib.rs  promise.rs  utils.rs
substantial/common/src/backends/: fs.rs  mod.rs  redis.rs
substantial/common/wit/: substantial.wit
substantial/deno/: deno.json  index.ts  promises.ts
substantial/deno/host/: host.mjs
substantial/protos/: events.py  metadata.py
substantial/protos/events/: __init__.py
substantial/src/: main.rs
substantial/src/backends/: mod.rs
substantial/src/protocol/: events.rs  metadata.rs
substantial/src/runtimes/: mod.rs
substantial/src/runtimes/python/: definitions.rs  mod.rs
substantial/workflows/: __init__.py  context.py  parser.py  ref.py  run.py  utils.py  workflow.py
tests/: test_durable.py  test_filters.py  test_utils.py  test_workflows.py  utils.py
tests/async/: test.py
tests/basic/: test.py
tests/basic/workflows/event/: run.sh  worker.py  workflow.py
tests/basic/workflows/simple/: run.sh  worker.py  workflow.py
tests/complex/: test.py  test_utils.py  test_workflows.py  utils.py
tests/complex/workflows/: events.py  simple.py
tests/sync/: test.py
tests/sync/workflows/event/: run.sh  worker.py  workflow.py
tests/sync/workflows/simple/: run.sh  worker.py
tests/workflows/: run.sh  simple.py  worker.py
tests/workflows/event/: run.sh  worker.py
tests/workflows/simple/: run.sh  worker.py
