[tool.poetry]
name = "substantial"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [
    { include = "demo" },
    { include = "substantial" }
]

[tool.poetry.dependencies]
python = "^3.11"
asyncio = "^3.4.3"
uvloop = "^0.21.0"
aioprocessing = { version = "2.0.1", extras = ["dill"] }
pydantic = "^2.9.2"
redis = "^5.2.0"
betterproto = { version = "2.0.0b7", extras = ["compiler"]}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
