[tool.poetry]
name = "substantial"
version = "0.1.0"
description = ""
authors = []
readme = "../README.md"
packages = [
    { include = "demo" },
    { include = "substantial" }
]

[tool.poetry.dependencies]
python = "^3.11"
asyncio = "^3.4.3"
uvloop = "^0.19.0"
aioprocessing = { version = "2.0.1", extras = ["dill"] }
pydantic = "^2.8.2"
redis = "^5.0.7"
betterproto = {git = "https://github.com/danielgtaylor/python-betterproto", extras = ["compiler"]}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
