[package]
name = "substantial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
tokio = { version = "1.39.2", features = ["full"] }
async-std = "1.10"

pyo3 = { version = "0.22.2", features = ["serde"] }
pyo3-asyncio = { version = "0.13.5", features = ["testing", "attributes", "async-std-runtime"] }
serde-pyobject = "0.4.0"

serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
protobuf = "3.5.0"
